# spurfire

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yml  client-publish.yml  client-release.yml  packages.yml  rehearsal-candidate.yml
charts/spurfire-control/: .helmignore  Chart.yaml  LICENSE  README.md  values.schema.json  values.yaml
charts/spurfire-control/templates/: NOTES.txt  _helpers.tpl  broker-deployment.yaml  configmap.yaml  deployment.yaml  httproute.yaml  networkpolicy.yaml  protected-bootstrap-job.yaml  protected-lease-rbac.yaml  protected-pvc.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
crates/spurfire-cli/: Cargo.toml
crates/spurfire-cli/src/: main.rs
crates/spurfire-control/: Cargo.toml  NOTES.md
crates/spurfire-control/src/: lib.rs
crates/spurfire-gdext/: Cargo.toml  README.md
crates/spurfire-gdext/src/: archetype.rs  horse_controller.rs  lib.rs  lobby_client.rs  locomotion.rs  m3_gameplay_controller.rs  mounted_weapon_controller.rs  network_rider.rs  peer_session.rs  saddle_dive_controller.rs
crates/spurfire-net/: Cargo.toml
crates/spurfire-net/src/: lib.rs  replication.rs  rustscale.rs  v2.rs
crates/spurfire-protocol/: Cargo.toml
crates/spurfire-protocol/src/: api.rs  combat.rs  credential.rs  election.rs  id.rs  lib.rs  m3.rs  m3_combat.rs  m4.rs  m5.rs  model.rs  network_inspection.rs  radius.rs  saddle_dive.rs  session.rs  stance.rs  state.rs  time.rs  version.rs
crates/spurfire-protocol/src/combat/: kernel.rs
crates/spurfire-server/: Cargo.toml
crates/spurfire-server/src/: alpha_execution.rs  clock.rs  config.rs  crypto.rs  error.rs  inspect.html  landing.html  lease_authority.rs  lib.rs  main.rs  owner_key.rs  protected_broker.rs  provider.rs  rehearsal.rs  service.rs  store.rs  supervision.rs  vault.rs
crates/spurfire-server/tests/: inspector_shell.rs  protected_alpha.rs  rehearsal_supervisor.rs  router.rs
docs/: alpha-playtest.md  alpha-release-qualification.md  architecture.md  asset-licenses.md  combat-m1.md  control-plane-network-view.md  decisions.md  deployment.md  design.md  godot-m0.md  lobby-service.md  p2p-networking.md  protected-alpha.md  prototype-plan.md  release-notes-0.1.0.md  release-notes-0.1.1.md  release-notes-0.1.2.md  release-notes-0.1.3.md  release-notes-0.2.0.md  rustscale-integration.md  rustscale-tailnet-tooling.md  session-identity-architecture.md  tailscale-api.md  testing.md
docs/release-evidence/: README.md  template.json
game/: README.md  export_presets.cfg  icon.icns  project.godot
game/assets/kenney/: manifest.json
game/assets/kenney/nature-kit/: cactus_short.glb.import  cactus_tall.glb.import  fence_gate.glb.import  fence_simple.glb.import  rock_largeA.glb.import  rock_smallA.glb.import  sign.glb.import  tree_default.glb.import  tree_oak.glb.import
game/assets/kenney/survival-kit/: barrel-open.glb.import  barrel.glb.import  signpost.glb.import
game/assets/kenney/survival-kit/Textures/: colormap.png.import
game/assets/weapons/: manifest.json
game/combat/: README.md  combat_effects.tscn  dust_fx.tscn  longspur_rifle.tscn  mounted_rifle.tscn  rattler_rifle.tscn  rifle_pickup.tscn  target_dummy.tscn  target_range_props.tscn
game/combat/tests/: combat_smoke.gd  combat_smoke.gd.uid  combat_smoke.tscn
game/lobby/: README.md  lobby_contract.gd  lobby_contract.gd.uid  lobby_http_client.gd  lobby_http_client.gd.uid  lobby_shell.tscn
game/lobby/tests/: lobby_contract_test.gd  lobby_contract_test.gd.uid  lobby_contract_test.tscn
game/scenes/: bootstrap.tscn  frontier_arena.tscn  graybox_course.tscn  headless_smoke.tscn  visual_capture.tscn
game/scenes/art/: frontier_prop_set.tscn
game/scenes/art/weapons/: dustwalker_art.tscn  longspur_art.tscn  rattler_art.tscn
game/scripts/: archetype_selector.gd  archetype_selector.gd.uid  attribute_panel.gd  attribute_panel.gd.uid  bootstrap.gd  bootstrap.gd.uid  camera_rig.gd  camera_rig.gd.uid  capture_gate.gd  capture_gate.gd.uid  combat_crosshair.gd  combat_crosshair.gd.uid  combat_effects.gd  combat_effects.gd.uid  combat_hud.gd  combat_hud.gd.uid  combat_player.gd  combat_player.gd.uid  combat_rifle_pickup.gd  combat_rifle_pickup.gd.uid  combat_target_dummy.gd  combat_target_dummy.gd.uid  combat_weapon_rig.gd  combat_weapon_rig.gd.uid  course_builder.gd  course_builder.gd.uid  dust_fx.gd  dust_fx.gd.uid  frontier_arena.gd  frontier_arena.gd.uid  gameplay_toast.gd  gameplay_toast.gd.uid  headless_smoke.gd  headless_smoke.gd.uid  horse_visual.gd  horse_visual.gd.uid  hud.gd  hud.gd.uid  kill_zone.gd  kill_zone.gd.uid  (+18 more)
game/ui/: archetype_selector.tscn  attribute_panel.tscn  capture_gate.tscn  stylized_feedback.tscn
game/ui/combat/: combat_hud.tscn
game/ui/tests/: polish_smoke.gd  polish_smoke.gd.uid  polish_smoke.tscn
scripts/: aggregate-playtest.py  build-gdext.sh  check-alpha-evidence.py  check-alpha-lifecycle-evidence.py  check-alpha-smoke-log.sh  check-control-plane-deps.sh  check-godot-p2p-evidence.py  check-godot-secret-paths.sh  check-packaging.sh  check-release-metadata.sh  check-release-tag-binding.sh  finalize-oci-index.sh  godot-single-threaded-ci.sh  install-just-ci.sh  live-rustscale-p2p.sh  make-alpha-candidate-metadata.py  make-rehearsal-candidate-metadata.py  prove-local-p2p.sh  prove-local-scale.sh  run-alpha-two-client.sh  run-p2p-demo.sh  stamp-game-build.py  test-godot.sh  ts-api.sh
scripts/tests/: test_finalize_oci_index.py  test_godot_p2p_evidence.py  test_packages_workflow.py  test_release_qa.py  test_stamp_game_build.py
scripts/tests/fixtures/: oci-index.json
