[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.91"
license = "BSD-3-Clause"
repository = "https://github.com/rajsinghtech/spurfire"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
zeroize = "1"

[patch.crates-io]
# RustScale 8511e0b requires its receive-pipeline BoringTun fork.
# This vendored copy is from that exact pinned revision.
boringtun = { path = "vendor/boringtun" }

[patch."https://github.com/rajsinghtech/rustscale"]
# Pinned 8511e0b netstack plus the application-UDP send wakeup fix.
rustscale-netstack = { path = "vendor/rustscale-netstack" }
