[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.91"
license = "BSD-3-Clause"
repository = "https://github.com/rajsinghtech/spurfire"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
zeroize = "1"

[patch.crates-io]
# RustScale v0.1.4 requires the receive-pipeline APIs documented in the
# vendored BoringTun provenance. Upstream boringtun 0.7.1 does not expose them.
boringtun = { path = "vendor/boringtun" }
