[package]
name = "spurfire-cli"
description = "spurfire-ctl: lobby lifecycle CLI for Spurfire"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "spurfire-ctl"
path = "src/main.rs"

[dependencies]
spurfire-control = { path = "../spurfire-control" }
spurfire-protocol = { path = "../spurfire-protocol" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
dotenvy.workspace = true
zeroize.workspace = true
