[package]
name = "spurfire-control"
description = "Control plane for Spurfire lobbies: Tailscale tailnet/key lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
dotenvy.workspace = true

[dev-dependencies]
mockito = "7"
