[package]
name = "spurfire-control"
description = "Control plane for Spurfire lobbies: Tailscale tailnet/key lifecycle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
zeroize.workspace = true

[dev-dependencies]
mockito = "1.7"
