[package]
name = "spurfire-gdext"
version = "0.1.0"
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
description = "Godot 4.7 horse locomotion GDExtension for Spurfire"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = { version = "=0.5.4", features = ["api-4-7"] }
