[package]
name = "spurfire-gdext"
version = "0.1.0"
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
description = "Godot 4.7 horse locomotion GDExtension for Spurfire"

[features]
default = ["production-control-origin"]
production-control-origin = []
rehearsal-control-origin = []

[lib]
name = "spurfire_godot"
crate-type = ["cdylib", "rlib"]

[dependencies]
ed25519-dalek = "2"
getrandom = "0.2"
godot = { version = "=0.5.4", features = ["api-4-7"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
spurfire-protocol = { path = "../spurfire-protocol" }
spurfire-net = { path = "../spurfire-net", features = ["rustscale"] }
tokio.workspace = true
zeroize.workspace = true
