[package]
name = "spurfire-net"
description = "Transport-independent Spurfire peer session with optional RustScale UDP adapter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
rustscale = ["dep:rustscale-tsnet", "dep:rustscale-netstack", "dep:tempfile"]

[dependencies]
base64 = "0.22"
ed25519-dalek = "2"
spurfire-protocol = { path = "../spurfire-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
rustscale-tsnet = { git = "https://github.com/rajsinghtech/rustscale", rev = "272ee212c7c339c3d028ea474554154bc28ae381", optional = true }
rustscale-netstack = { git = "https://github.com/rajsinghtech/rustscale", rev = "272ee212c7c339c3d028ea474554154bc28ae381", optional = true }
tempfile = { version = "3", optional = true }
zeroize.workspace = true

[[bin]]
name = "spurfire-local-p2p-proof"
path = "src/bin/local_p2p_proof.rs"

[[bin]]
name = "spurfire-p2p-smoke"
path = "src/bin/p2p_smoke.rs"
required-features = ["rustscale"]

[[bin]]
name = "spurfire-migration-smoke"
path = "src/bin/migration_smoke.rs"
required-features = ["rustscale"]
