[package]
name = "spurfire-protocol"
description = "Engine-independent wire protocol and deterministic lobby rules for Spurfire"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
