[package]
name = "spurfire-protocol"
description = "Engine-independent wire protocol and deterministic lobby rules for Spurfire"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
ed25519-dalek = "2"
serde.workspace = true
sha2 = "0.10"
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
