[package]
name = "spurfire-server"
description = "Prototype HTTP lobby service for Spurfire"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "spurfire-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "tokio", "http1"] }
chacha20poly1305 = "0.10"
clap.workspace = true
dotenvy.workspace = true
getrandom = "0.2"
serde.workspace = true
serde_json.workspace = true
spurfire-control = { path = "../spurfire-control" }
spurfire-protocol = { path = "../spurfire-protocol" }
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1", features = ["v4"] }
zeroize.workspace = true

[dev-dependencies]
http-body-util = "0.1"
mockito = "1"
tower = { version = "0.5", features = ["util"] }
