[package]
name = "spurfire-server"
description = "Prototype HTTP lobby service for Spurfire"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "spurfire-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "tokio", "http1"] }
chacha20poly1305 = "0.10"
clap.workspace = true
dotenvy.workspace = true
ed25519-dalek = "2"
getrandom = "0.2"
fs2 = "0.4.3"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
spurfire-control = { path = "../spurfire-control" }
spurfire-protocol = { path = "../spurfire-protocol" }
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1", features = ["v4"] }
zeroize.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
mockito = "1"
tower = { version = "0.5", features = ["util"] }
