[package]
name = "spurfire-server"
description = "Prototype HTTP lobby service for Spurfire"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "spurfire-server"
path = "src/main.rs"

[[bin]]
name = "spurfire-alpha-launcher"
path = "src/bin/spurfire-alpha-launcher.rs"

[[bin]]
name = "spurfire-alpha-worker"
path = "src/bin/spurfire-alpha-worker.rs"

[[bin]]
name = "spurfire-provider-broker"
path = "src/bin/spurfire-provider-broker.rs"

[[bin]]
name = "spurfire-owner-key"
path = "src/bin/spurfire-owner-key.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "tokio", "http1"] }
chacha20poly1305 = "0.10"
clap.workspace = true
dotenvy.workspace = true
ed25519-dalek = "2"
getrandom = "0.2"
fs2 = "0.4.3"
hex = "0.4"
hmac = "0.12"
reqwest.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
spurfire-control = { path = "../spurfire-control" }
spurfire-protocol = { path = "../spurfire-protocol" }
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1", features = ["v4"] }
zeroize.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"
rustix = { version = "1", features = ["process"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
mockito = "1"
tower = { version = "0.5", features = ["util"] }
